--- a/view/UserRoleManagementDialog.ui
+++ b/view/UserRoleManagementDialog.ui
@@ -407,6 +407,43 @@
        <string>Register</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="settings_button">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>370</y>
+        <width>311</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>User Settings</string>
+      </property>
+     </widget>
+     <zorder>username_edit</zorder>
+     <zorder>label</zorder>
+     <zorder>password_edit</zorder>
+     <zorder>label_2</zorder>
+     <zorder>label_3</zorder>
+     <zorder>retype_password_edit</zorder>
+     <zorder>label_5</zorder>
+     <zorder>surname_edit</zorder>
+     <zorder>firstname_edit</zorder>
+     <zorder>label_6</zorder>
+     <zorder>label_15</zorder>
+     <zorder>phone_edit</zorder>
+     <zorder>label_18</zorder>
+     <zorder>email_edit</zorder>
+     <zorder>get_mac_checkbox</zorder>
+     <zorder>mac_address_edit</zorder>
+     <zorder>organization_type_cbox</zorder>
+     <zorder>label_11</zorder>
+     <zorder>label_10</zorder>
+     <zorder>organization_cbox</zorder>
+     <zorder>register_edit</zorder>
+     <zorder>label_17</zorder>
+     <zorder>settings_button</zorder>
+     <zorder>user_role_lwidget</zorder>
     </widget>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="geometry">
@@ -722,17 +759,17 @@
      <widget class="QListWidget" name="user_role_lwidget">
       <property name="geometry">
        <rect>
-        <x>6</x>
-        <y>342</y>
-        <width>298</width>
-        <height>82</height>
+        <x>3</x>
+        <y>353</y>
+        <width>301</width>
+        <height>97</height>
        </rect>
       </property>
      </widget>
      <widget class="QPushButton" name="delete_button">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>210</x>
         <y>300</y>
         <width>70</width>
         <height>23</height>
@@ -758,7 +795,7 @@
      <widget class="QPushButton" name="add_button">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>30</x>
         <y>300</y>
         <width>70</width>
         <height>23</height>
@@ -768,30 +805,14 @@
        <string>Add</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_8">
+     <widget class="QLineEdit" name="find_update_user_edit">
       <property name="geometry">
        <rect>
-        <x>7</x>
-        <y>326</y>
-        <width>292</width>
-        <height>16</height>
+        <x>10</x>
+        <y>328</y>
+        <width>291</width>
+        <height>20</height>
        </rect>
-      </property>
-      <property name="text">
-       <string>Existing User Roles</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="settings_button">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>430</y>
-        <width>221</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>User Settings</string>
       </property>
      </widget>
     </widget>
@@ -804,7 +825,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>40</y>
+       <y>70</y>
        <width>181</width>
        <height>281</height>
       </rect>
@@ -821,10 +842,10 @@
     <widget class="QTableWidget" name="position_twidget">
      <property name="geometry">
       <rect>
-       <x>199</x>
+       <x>210</x>
        <y>40</y>
-       <width>221</width>
-       <height>281</height>
+       <width>201</width>
+       <height>311</height>
       </rect>
      </property>
      <attribute name="horizontalHeaderDefaultSectionSize">
@@ -842,7 +863,7 @@
        <x>430</x>
        <y>40</y>
        <width>391</width>
-       <height>281</height>
+       <height>311</height>
       </rect>
      </property>
      <column>
@@ -874,8 +895,8 @@
     <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>330</y>
+       <x>0</x>
+       <y>370</y>
        <width>811</width>
        <height>85</height>
       </rect>
@@ -900,10 +921,10 @@
     <widget class="QPushButton" name="load_users_button">
      <property name="geometry">
       <rect>
-       <x>9</x>
+       <x>10</x>
        <y>10</y>
-       <width>171</width>
-       <height>23</height>
+       <width>181</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="text">
@@ -913,14 +934,24 @@
     <widget class="QPushButton" name="load_position_button">
      <property name="geometry">
       <rect>
-       <x>199</x>
+       <x>210</x>
        <y>10</y>
-       <width>171</width>
+       <width>201</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
       <string>Load All Position</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="find_user_edit">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>181</width>
+       <height>21</height>
+      </rect>
      </property>
     </widget>
    </widget>
