--- a/view/PlanCaseDialog.ui
+++ b/view/PlanCaseDialog.ui
@@ -242,10 +242,16 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>195</y>
+      <y>145</y>
       <width>361</width>
-      <height>21</height>
+      <height>71</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string>Message Information</string>
