--- a/view/PlanLayerFilterDialog.ui
+++ b/view/PlanLayerFilterDialog.ui
@@ -34,11 +34,6 @@
       <height>231</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string notr="true">1</string>
-     </property>
-    </column>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
@@ -62,14 +57,9 @@
       <height>321</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string notr="true">1</string>
-     </property>
-    </column>
    </widget>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="ok_button">
    <property name="geometry">
     <rect>
      <x>366</x>
